# llm_clinical_reproducibility

./: README.md  paper.tex  pyproject.toml
configs/: pipeline.yaml
data/: questions_gold.md  questions_gold_draft.md
outputs/: aggregates.csv  raw_responses.csv  raw_responses.jsonl  raw_responses.parquet  report.md  scored_responses.csv  scored_responses.parquet
src/clinical_eval_pipeline/: __init__.py  aggregate.py  cli.py  config.py  io_gold_csv.py  io_markdown.py  logging_utils.py  ollama_client.py  reporting.py  runner.py
src/clinical_eval_pipeline/scoring/: deterministic.py  llm_judge.py
tests/: test_aggregate.py  test_deterministic.py  test_reporting.py
